@@ -1,6 +1,7 @@
 package forge.game.ability.effects;
 
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.Stream;
 import java.util.stream.Collectors;
 
@@ -10,8 +11,6 @@ import forge.card.GamePieceType;
 import forge.item.PaperCardPredicates;
 import forge.util.*;
 import org.apache.commons.lang3.StringUtils;
-
-import com.google.common.collect.ImmutableList;
 
 import forge.StaticData;
 import forge.card.CardRulesPredicates;
@@ -104,7 +103,7 @@ public class PlayEffect extends SpellAbilityEffect {
         CardCollectionView showCards = new CardCollection();
 
         if (sa.hasParam("Valid")) {
-            List<ZoneType> zones = sa.hasParam("ValidZone") ? ZoneType.listValueOf(sa.getParam("ValidZone")) : ImmutableList.of(ZoneType.Hand);
+            List<ZoneType> zones = sa.hasParam("ValidZone") ? ZoneType.listValueOf(sa.getParam("ValidZone")) : List.of(ZoneType.Hand);
             tgtCards = new CardCollection(AbilityUtils.filterListByType(game.getCardsIn(zones), sa.getParam("Valid"), sa));
             if (sa.hasParam("ShowCards")) {
                 showCards = AbilityUtils.filterListByType(game.getCardsIn(zones), sa.getParam("ShowCards"), sa);
@@ -184,14 +183,15 @@ public class PlayEffect extends SpellAbilityEffect {
             return;
         }
 
+        Predicate<SpellAbility> validSA;
         if (sa.hasParam("ValidSA")) {
-            final String valid[] = sa.getParam("ValidSA").split(",");
-            final List<Card> invalid = tgtCards.stream().filter(c -> !IterableUtil.any(AbilityUtils.getBasicSpellsFromPlayEffect(c, controller), SpellAbilityPredicates.isValid(valid, controller, source, sa))).collect(Collectors.toList());
-            if (!invalid.isEmpty())
-                tgtCards.removeAll(invalid);
+            validSA = SpellAbilityPredicates.isValid(sa.getParam("ValidSA").split(","), controller, source, sa);
+            tgtCards.removeIf(c -> AbilityUtils.getSpellsFromPlayEffect(c, controller, CardStateName.Original, false, validSA).isEmpty());
             if (tgtCards.isEmpty()) {
                 return;
             }
+        } else {
+            validSA = null;
         }
 
         int amount = 1;
@@ -247,7 +247,7 @@ public class PlayEffect extends SpellAbilityEffect {
                 game.getAction().revealTo(tgtCard, controller);
             }
             String prompt = sa.hasParam("CastTransformed") ? "lblDoYouWantPlayCardTransformed" : "lblDoYouWantPlayCard";
-            if (singleOption && !controller.getController().confirmAction(sa, null, Localizer.getInstance().getMessage(prompt, CardTranslation.getTranslatedName(tgtCard.getName())), tgtCard, null)) {
+            if (singleOption && !controller.getController().confirmAction(sa, null, Localizer.getInstance().getMessage(prompt, tgtCard.getTranslatedName()), tgtCard, null)) {
                 if (wasFaceDown) {
                     tgtCard.turnFaceDownNoUpdate();
                     tgtCard.updateStateForView();
@@ -285,11 +285,7 @@ public class PlayEffect extends SpellAbilityEffect {
                 state = CardStateName.Backside;
             }
 
-            List<SpellAbility> sas = AbilityUtils.getSpellsFromPlayEffect(tgtCard, controller, state, !altCost);
-            if (sa.hasParam("ValidSA")) {
-                final String valid[] = sa.getParam("ValidSA").split(",");
-                sas.removeIf(sp -> !sp.isValid(valid, controller , source, sa));
-            }
+            List<SpellAbility> sas = AbilityUtils.getSpellsFromPlayEffect(tgtCard, controller, state, !altCost, validSA);
 
             if (altCostManaCost) {
                 sas.removeIf(sp -> sp.getPayCosts().getCostMana().getMana().isNoCost());
@@ -428,6 +424,10 @@ public class PlayEffect extends SpellAbilityEffect {
                 tgtSA.getTargetRestrictions().setMandatory(true);
             }
 
+            if (sa.hasParam("Named")) {
+                tgtSA.setName(sa.getName());
+            }
+
             // can't be done later
             if (sa.hasParam("ReplaceGraveyard")) {
                 if (!sa.hasParam("ReplaceGraveyardValid")
@@ -486,7 +486,7 @@ public class PlayEffect extends SpellAbilityEffect {
     public static void addReplaceGraveyardEffect(Card c, Card hostCard, SpellAbility sa, SpellAbility tgtSA, String zone) {
         final Game game = hostCard.getGame();
         final Player controller = sa.getActivatingPlayer();
-        final String name = hostCard.getName() + "'s Effect";
+        final String name = hostCard.getDisplayName() + "'s Effect";
         final String image = hostCard.getImageKey();
         final Card eff = createEffect(sa, controller, name, image);
 
@@ -510,7 +510,7 @@ public class PlayEffect extends SpellAbilityEffect {
             eff.copyChangedTextFrom(hostCard);
         }
 
-        game.getEndOfTurn().addUntil(exileEffectCommand(game, eff));
+        game.getEndOfTurn().addUntil(() -> game.getAction().exileEffect(eff));
 
         tgtSA.addRollbackEffect(eff);
 
